--- a/day03/if.html
+++ b/day03/if.html
@@ -7,18 +7,22 @@
 </head>
 <body>
     <script>
-        var 경력;
-        경력=10;
+        // var 경력;
+        // 경력=10;
+        // else에는 조건을 넣으면 안됩니다.
 
-        if(경력>10) {
-            console.log('모시고옵니다')
-        }else if(경력>5) {
-            console.log('우선채용')
-        }else if(경력>1) {
-            console.log('일반채용')
-        }else {
-            console.log('신입은 지원할 수 없습니다')
-        }
+        // if(경력>1) {
+        //     console.log('모시고옵니다')
+        // }else if(경력>5) {
+        //     console.log('우선채용')
+        // }else if(경력>10) {
+        //     console.log('일반채용')
+        // }else {
+        //     console.log('신입은 지원할 수 없습니다')
+        // }
+
+        // 위처럼 작성하면 if문의 범위가 else if문 두개의 범위를 포함해버리기 때문에
+        // 실질적으로 if문과 else문만 실행되는 조건문이 되어버린다
     </script>
 </body>
 </html>
