--- a/day02/operator.html
+++ b/day02/operator.html
@@ -81,5 +81,6 @@
                 // 조건 ? 참일때값 : 거짓일때값;
                 console.log(지원가능여부?'지원 가능 합니다':'지원 불가 합니다');
                 // 엑셀 if문과 모양이 똑같다!!
+        </script>
 </body>
 </html>
