--- a/day04/숙제.html
+++ b/day04/숙제.html
@@ -7,9 +7,32 @@
 </head>
 <body>
     <!-- 별을 사용해서 삼각형을 4방향으로 만들어주기 -->
-    * * * * *<br>
+    <!-- * * * * *<br> -->
     <script>
-        document.write()
+        for(let i = 0; i < 5; i++) {
+            for(let j = 0; j <= i; j++) {
+                document.write('&nbsp;*&nbsp;')
+            }
+            document.write('<br>')
+        }
+
+        document.write('<br>')
+
+        for(let i = 0; i < 5; i++) {
+            for(let j = 5; j > i; j--) {
+                document.write('&nbsp;*&nbsp;')
+            }
+            document.write('<br>')
+        }
+
+        document.write('<br>')
+
+        for(let i = 0; i < 5; i++) {
+            for(let j = 5; j > i; j--) {
+                document.write('&nbsp;*&nbsp;')
+            }
+            document.write('<br>')
+        }
     </script>
 </body>
 </html>
