--- a/day04/숙제.html
+++ b/day04/숙제.html
@@ -20,6 +20,7 @@
 
         for(let i = 0; i < 5; i++) {
             for(let j = 5; j > i; j--) {
+                //j = 0; j < 5-i; j++
                 document.write('&nbsp;*&nbsp;')
             }
             document.write('<br>')
@@ -28,7 +29,22 @@
         document.write('<br>')
 
         for(let i = 0; i < 5; i++) {
-            for(let j = 5; j > i; j--) {
+            for(let j = 0; j < i; j++) {
+                document.write('&nbsp;&nbsp;&nbsp;')
+            }
+            for(let j = 0; j < 5-i; j++) {
+                document.write('&nbsp;*&nbsp;')
+            }
+            document.write('<br>')
+        }
+        
+        document.write('<br>')
+
+        for(let i = 0; i < 5; i++) {
+            for(let j = 0; j < 4-i; j++) {
+                document.write('&nbsp;&nbsp;&nbsp;')
+            }
+            for(let j = 0; j < i+1; j++) {
                 document.write('&nbsp;*&nbsp;')
             }
             document.write('<br>')
