--- a/day05/별찍기심화.html
+++ b/day05/별찍기심화.html
@@ -12,7 +12,7 @@
         const line = 5;
 
         for(i = 0; i < line; i++) {
-            for(j = 0; j < Math.abs(2-i); j++) {
+            for(let j = 0; j < Math.abs(2-i); j++) {
                 document.write(`○`)
             }
             for(let j = 0; j < line; j++) {
