--- a/day05/별찍기심화.html
+++ b/day05/별찍기심화.html
@@ -10,8 +10,9 @@
         // 모래시계모양 만들기
 
         const line = 5;
+        const harf =(line-1)/2
 
-        for(i = 0; i < line; i++) {
+        for(let i = 0; i < line; i++) {
             for(let j = 0; j < Math.abs(2-i); j++) {
                 document.write(`○`)
             }
