--- a/day05/별찍기심화.html
+++ b/day05/별찍기심화.html
@@ -13,10 +13,10 @@
         const harf =(line-1)/2
 
         for(let i = 0; i < line; i++) {
-            for(let j = 0; j < Math.abs(2-i); j++) {
+            for(let j = 0; j < harf-Math.abs(harf-i); j++) {
                 document.write(`○`)
             }
-            for(let j = 0; j < line; j++) {
+            for(let j = 0; j < line - (harf-Math.abs(harf-i))*2; j++) {
                 document.write('●')
             }
             document.write('<br>')
