--- a/day07/난수.html
+++ b/day07/난수.html
@@ -32,6 +32,8 @@
             }
         }
         console.log(max,min);
+
+        // parseInt(Math.random()*범위) + 시작값
     </script>
 </body>
 </html>
