--- a/캐러셀/무한슬라이드-뷰카운트.html
+++ b/캐러셀/무한슬라이드-뷰카운트.html
@@ -66,6 +66,14 @@
 
         const contentWidth = (slider.clientWidth - gap * (viewCount - 1)) / viewCount
 
+        // 현재 뷰카운트가 달라지면 오작동하는 이슈가 있습니다
+        // 이는 뷰카운크 갯수만큼 클론을 만들어야 하는데
+        // 기존의 작성은 뷰카운트가 1인 경우에만 올바르게 작동되는 상황입니다
+        // 반복문을 이용해 뷰카운트의 갯수만큼 클론을 만들어주면 해결 될 것 같은데
+        // 반복문을 한 번만 쓰게 되면 1 2 3 4 5 -> [1] [5] 1 2 3 4 5 [1] [5] 이런 식으로 될 것 입니다
+        // 복사하는 부분과 끼워넣는 부분을 별도로 분리해서 (for 2개 이상 쓰라는 이야기)
+        // 복사본을 적절한 위치에 잘 넣어보도록 합시다. 
+
         const cloneFirst = contentWrapper.firstElementChild.cloneNode(true);
         const cloneLast = contentWrapper.lastElementChild.cloneNode(true);
 
